SERVER-44022 Fix race in PrepareConflictTracker and speed up happy path